# gup

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.md  Atari statestiek.ods  GUP benchmarks.ods  INSTALL.md  Makefile  Makefile.am  Makefile.in  README  README.md  acconfig.h  acinclude.m4  aclocal.m4  calcorp statestiek.ods  config.guess  config.sub  configure  configure.ac  git_push_all.sh  gup.spec  gup.spec.in  libtool  libtool-patches  mk_autoconf.sh  mk_gup_Win32_release.sh  n0_statestiek.ods  n1_statestiek.ods  sync_to_Q_network_drive.sh  sync_to_me.sh  test.cdump.hexdump  test.sollwert.asmdump.hexdump.txt  test.sollwert.bindump.hexdump.txt  test.sollwert.cdump.hexdump.txt  test_check_archive_size.sh
.github/workflows/: c-cpp-test.yml  c-cpp.yml  msbuild.yml  regenerate-autoconf.yml
arcman/: .cvsignore  Makefile  Makefile.am  Makefile.in  arc_util.cpp  arc_util.h  arcctl.h  archive.cpp  archive.h  arj_arc.cpp  arj_arc.h  arj_hdr.cpp  arj_hdr.h  dump_arc.cpp  dump_arc.h  dump_hdr.cpp  dump_hdr.h  gz_arc.cpp  gz_arc.h  gz_hdr.cpp  gz_hdr.h  header.cpp  header.h  lha_arc.cpp  lha_arc.h  lha_hdr.cpp  lha_hdr.h  os.h  unix_arj.cpp  unix_gz.cpp  unix_lha.cpp  unix_utl.cpp  w32_arj.cpp  w32_gz.cpp  w32_lha.cpp  w32_utl.cpp
arcman/doc/: arcman.txt
arcman/include/unix/: arcman.h
arcman/include/win32/: arcman.h
arjbeta/: arj_hdr.c  arj_hdr.h  arj_outp.c  arj_outp.h  arjbeta.c  arjbeta.prj  file_buf.c  file_buf.h  filter.c  gz_hdr.c  gz_hdr.h  lha_hdr.c  lha_hdr.h  port.h  s_header.c  scan.c  scan.h  swab_bit.txt  swabbit.prj  swapbit.c
atari/cgl/: application.cc  dialog.cc  event.cc  internal.h  userdef.cc  util.cc  window.cc
atari/cgl/include/: cgl_appl.h  cgl_dial.h  cgl_evnt.h  cgl_util.h  cgl_wind.h  cglscode.h
atari/shell/: add.cpp  add.h  alert.cc  alert.h  arj.cc  arj.h  arj_slid.cc  arj_slid.h  arjshell.h  arjshell.rsc  arjshell.rsd  atari.cpp  dir.cc  dir.h  extract.cc  main.cc  main.h  message.cc  message.h  os_dep.h  popup.cc  popup.h  resource.cc  resource.h  sh_opts.h  slider.cc  slider.h  util.c  util.h  version.h
compress/: .cvsignore  Makefile  Makefile.am  Makefile.in  arj_m4.c  assume_compat.h  compress.prj  compress_charsi.c  crc.c  decode.c  decode.h  encode.c  encode.h  evaluatr.c  evaluatr.h  n0.c  n1.c  n2.c  n9.c  sld.c  sld32.c  sld32.h  sld32i.c  sld_indx.c  sld_med.c  sld_new.c  sld_smll.c
compress/m68000/: crc16bit.s  crc_opti.s  enc_opti.s  sld_opti.s  sldfopti.s  sldmopti.s  sldsopti.s
compress/m68000.mot/: crc16bit.s  crc_opti.s  enc_opti.s  mot_opti.c  opti.h  sld_opti.s  sldfopti.s  sldmopti.s  sldsopti.s
compress/st_opti/: backmtch.s  chaoscrc.s  command.mac  crc16bit.s  encodest.s  opti.h  sld.s  sld_med.s  sld_smll.s  sldf.s  st_opti.c
doc/: archive.txt  headers.txt
doc/specs/: gossip.001  module.txt  platform.txt
gupdump/: Makefile  arj_m4.c  arj_m7.c  atari_st.prj  gupdump.c  ni_n0.c  ni_n1.c  ni_n2.c
gupdump/atari_st/: arj_m7.s  ni_n2.s
guplib/: .cvsignore  Makefile  Makefile.am  Makefile.in  arc_util.cpp  arc_util.h  arcctl.h  archive.cpp  archive.h  arj_arc.cpp  arj_arc.h  arj_hdr.cpp  arj_hdr.h  crc.c  decode.c  decode.h  dump_arc.cpp  dump_arc.h  dump_hdr.cpp  dump_hdr.h  encode.c  encode.h  evaluatr.c  evaluatr.h  gup_err.c  gup_io.c  gz_arc.cpp  gz_arc.h  gz_hdr.cpp  gz_hdr.h  header.cpp  header.h  lha_arc.cpp  lha_arc.h  lha_hdr.cpp  lha_hdr.h  matchpat.c  os.h  sld.c  sld_indx.c  (+12 more)
include/: .cvsignore  Makefile  Makefile.am  Makefile.in  arcman.h  arjbeta.h  compiler_intrinsics.h  compr_io.h  compress.h  config.h  config.h.in  configbc.h  configst.h  crc.h  gup.h  gup_err.h  gup_io.h  gup_io_porting.h  options.h  sld32.h  support.h  w32_err.h
include/sysdep/: Makefile  Makefile.am  Makefile.in  arcman.h
lib/: .cvsignore  Makefile  Makefile.am  Makefile.in  gup_err.c  gup_io.c  matchpat.c  strlwr.c  w32_err.c
ms-win/: descript.ion
ms-win/confctrl/: descript.ion  pack.cc
ms-win/doc/: coding.d  coding.gen  descript.ion
ms-win/global/: descript.ion  settings.d  settings.h
ms-win/osrtl/: descript.ion  osrtl.d  osrtl.h
ms-win/osrtl/windows/: descript.ion  osrtl.d  osrtl.h  settings.d  settings.h
ms-win/shell/: descript.ion
ms-win/shell/windows/: descript.ion  settings.h
ni_pack/: Makefile  README.md  arj_m4.c  arj_m7.c  atari_st.prj  depack_e.c  depack_t.c  even.prj  ni_n1.c  ni_n2.c
ni_pack/atari_st/: arj_m4.s  arj_m7e.s  ni_n0.s  ni_n0_f.s  ni_n1.s  ni_n1_e.s  ni_n1_f.s  ni_n2.s  ni_n2_f.s  st_info.txt
ni_pack/windows/msvc2022/: demo.sln  ni_packer.vcxproj  ni_packer.vcxproj.filters  ni_packer_demo.vcxproj  ni_packer_demo.vcxproj.filters
ni_packer/: Makefile  arj_crc.c  arj_m4.c  arj_m7.c  atari_st.prj  depack_t.c  ni_n0.c  ni_n1.c
ni_packer/atari_st/: arj_m7.s  ni_n0.s  unstore.s
spec/: archive.txt  headers.txt
test/: 1234hpv.txt  depack_t.c  resultok.arj  test_depack_t.c
test/calcorp/: obj2  readme  sizes  sources  trans
test/test-data/ref-out/: test.sollwert.asmdump.hexdump.txt  test.sollwert.bindump.hexdump.txt  test.sollwert.cdump.hexdump.txt
test/test-data/src/: lorem.txt  lorem__.txt  lorem____.txt  tennyson.txt
unarjbta/: environ.c  unarj.c  unarj.h  unarj.prj
unix/: .cvsignore  Makefile  Makefile.am  Makefile.in  arj.h  compress.cpp  decomp.cpp  gup  main.cpp  scan.cpp  scan.h  test.arj  utils.cpp  utils.h
win32/bcb5/: Gup.bpf  Gup.bpr  Gup.res  README.txt
win32/msvc2017/: gup.sln  gup.vcxproj  gup.vcxproj.filters  libgup.vcxproj  libgup.vcxproj.filters  ni_packer.vcxproj  ni_packer.vcxproj.filters  test_ni_depack.vcxproj
win32/msvc2019/: config.h  gup.sln  gup.vcxproj  gup.vcxproj.filters  libgup.vcxproj  libgup.vcxproj.filters  ni_packer.vcxproj  ni_packer.vcxproj.filters  test_ni_depack.vcxproj.filters
win32/msvc2022/: gup.sln  gup.vcxproj  gup.vcxproj.filters  libgup.vcxproj  libgup.vcxproj.filters  ni_packer.vcxproj  ni_packer.vcxproj.filters
win32/msvc2022/GupDump/: GupDump.sln  GupDump.vcxproj  GupDump.vcxproj.filters
win32/msvc2022/gup_tests/: Makefile  gup_tests.vcxproj  gup_tests.vcxproj.filters
win32/msvc20xx-common/: config.h
(+144 files in other folders)
